# python-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
styles/: README.md
styles/styles/: darglint.toml  file-structure.toml  flake8.toml  isort.toml  mypy.toml  nitpick-style.toml  pre-commit.toml
